fix security issue

--- a/samples/net9/WebAspSpa/ClientApp/package.json
+++ b/samples/net9/WebAspSpa/ClientApp/package.json
@@ -46,7 +46,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vite": "6.4.1"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
